--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.44",
+    "@babel/runtime": "^7.2.0",
     "babel-runtime": "^6.20.0",
     "meteor-node-stubs": "~0.2.4",
     "numeral": "^2.0.6",
